After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726801 - rfbsrc: specifying out-of-bounds resolution leads to segfault
rfbsrc: specifying out-of-bounds resolution leads to segfault
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-20 23:16 UTC by blake tregre
Modified: 2014-08-28 06:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch which clamps resolution (1.72 KB, patch)
2014-03-20 23:16 UTC, blake tregre
committed Details | Review

Description blake tregre 2014-03-20 23:16:52 UTC
Created attachment 272527 [details] [review]
patch which clamps resolution

When using rfbsrc, setting offset properties (offset-x, offset-y) or rectangle size properties (width, height) to values greater than what the VNC server provides causes a segfault.  I'm attaching a patch that prevents the crash by clamping the values just after the connection is made.  

The same problem exists in 0.10, and the same patch applies cleanly, fixing the problem.
Comment 1 blake tregre 2014-08-27 23:55:59 UTC
Ping.
Comment 2 Sebastian Dröge (slomo) 2014-08-28 06:54:25 UTC
Thanks for the patch! Please attach patches in "git format-patch" format in the future :)

commit 105b52e88a097bdbc18f01a79851c8432de773df
Author: Blake Tregre <blake.tregre@gmail.com>
Date:   Thu Aug 28 09:53:17 2014 +0300

    rfbsrc: Clamp out of bounds resolutions to prevent segfaults
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726801