rfbsrc: Clamp out of bounds resolutions to prevent segfaults

https://bugzilla.gnome.org/show_bug.cgi?id=726801